<resources>
    <string name="app_name">Group To Do</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="enter_name">Enter name</string>
    <string name="due_date">Due Date</string>
    <string name="add_to_group">Add to Group</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="group_name">Group Name</string>
    <string name="user_name">User Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_name">Name</string>
    <string name="user_icon_description">Icon Description</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="menu_user">Profile</string>
    <string name="title_user_edit">User Edit</string>
    <string name="title_user">User</string>
    <string name="profile_uid">UID: </string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="delete">Delete</string>
    <string name="select_group">Select a Group</string>
    <string name="add_user_id">Add User ID</string>
</resources>