<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/your_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_above="@id/profile_name"
        android:text="@string/your_profile" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_above="@id/center_image"
        android:text="@string/profile_name" />

    <ImageView
        android:id="@+id/center_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/user_icon_description" />


    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/center_image"
        android:layout_marginTop="10dp"
        android:padding="1sp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/center_image"
        android:layout_marginTop="10dp"
        android:padding="1sp"
        android:text="@string/edit" />



</RelativeLayout>