<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.EditListItemFragment">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name" />


    <EditText
        android:id="@+id/group_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_below="@id/group_name"/>


    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_below="@id/group_name_edit_text"/>


    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_below="@id/user_name"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_name_edit_text"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/cancel"
        android:backgroundTint="#E0E0E0"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:backgroundTint="#E0E0E0"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>